update lauren fixed footer spacing

--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ footer .regText{
   font-family: 'noto';
   font-size: 15pt;
   font-weight: 200px;
-  line-height: 70px;
+  line-height: 90px;
   font-family: 'Noto Sans', sans-serif;
   text-decoration: none;
   padding: 0px;
